5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4368/executions/1649_2703.log
== TEST (2019-04-09 18:57:25) 
-- CODE:
idade=int(input("qual a idade: "))
if(idade=>18)
 mensagem(eleitor)
else
 mensagem(nao_eleitor)
print(mensagem.lower())
-- ERROR:
File "XXXX", line 2
    if(idade=>18)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:58:26) 
-- CODE:
idade=int(input("qual a idade?: "))
if(idade=>18)
 mensagem(eleitor)
else
 mensagem(nao_eleitor)
print(mensagem.lower())
-- ERROR:
File "XXXX", line 2
    if(idade=>18)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:58:57) 
-- CODE:
idade=int(input("qual a idade?: "))
if(idade<18)
 mensagem(eleitor)
else
 mensagem(nao_eleitor)
print(mensagem.lower())
-- ERROR:
File "XXXX", line 2
    if(idade<18)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:59:13) 
-- CODE:
idade=int(input("qual a idade?: "))
if(idade>18)
 mensagem(eleitor)
else
 mensagem(nao_eleitor)
print(mensagem.lower())
-- ERROR:
File "XXXX", line 2
    if(idade>18)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:00:15) 
-- CODE:
idade=int(input("qual a idade?: "))
if(idade=>18,=<18)
 mensagem(eleitor)
else
 mensagem(nao_eleitor)
print(mensagem.lower())
-- ERROR:
File "XXXX", line 2
    if(idade=>18,=<18)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:00:54) 
-- CODE:
idade=int(input("qual a idade?: "))
if(idade=>18)
 mensageme"leitor"
else
 mensagem"nao_eleitor"
print(mensagem.lower())
-- ERROR:
File "XXXX", line 2
    if(idade=>18)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:01:05) 
-- CODE:
idade=int(input("qual a idade?: "))
if(idade>18)
 mensageme"leitor"
else
 mensagem"nao_eleitor"
print(mensagem.lower())
-- EXECUTION TIME:
0.186592
-- ERROR:
  File "/home/codebench/codes/1649/2703/main.py", line 2
    if(idade>18)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:01:26) 
-- CODE:
idade=int(input("qual a idade?: "))
if(idade=>18)
 mensageme="leitor"
else
 mensagem="nao_eleitor"
print(mensagem.lower())
-- EXECUTION TIME:
0.213836
-- ERROR:
  File "/home/codebench/codes/1649/2703/main.py", line 2
    if(idade=>18)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:02:02) 
-- CODE:
idade=int(input("qual a idade?: "))
if(idade=>18):
   mensageme="leitor"
else:
   mensagem="nao_eleitor"
print(mensagem.lower())
-- EXECUTION TIME:
0.142782
-- ERROR:
  File "/home/codebench/codes/1649/2703/main.py", line 2
    if(idade=>18):
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:02:05) 
-- CODE:
idade=int(input("qual a idade?: "))
if(idade=>18):
   mensageme="leitor"
else:
   mensagem="nao_eleitor"
print(mensagem.lower())
-- EXECUTION TIME:
0.166006
-- ERROR:
  File "/home/codebench/codes/1649/2703/main.py", line 2
    if(idade=>18):
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:02:44) 
-- CODE:
idade=int(input("qual a idade?: "))
if(idade=>18):
   mensageme="eleitor"
else:
   mensagem="nao_eleitor"
print(mensagem.lower())
-- EXECUTION TIME:
0.1339
-- ERROR:
  File "/home/codebench/codes/1649/2703/main.py", line 2
    if(idade=>18):
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:02:53) 
-- CODE:
idade=int(input("qual a idade?: "))
if(idade=>18):
   mensageme="eleitor"
else:
   mensagem="nao_eleitor"
print(mensagem.lower())
-- EXECUTION TIME:
0.135457
-- ERROR:
  File "/home/codebench/codes/1649/2703/main.py", line 2
    if(idade=>18):
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:03:22) 
-- CODE:
idade=int(input("qual a idade?: "))
if(idade=<18):
   mensageme="nao_eleitor"
else:
   mensagem="eleitor"
print(mensagem.lower())
-- EXECUTION TIME:
0.147094
-- ERROR:
  File "/home/codebench/codes/1649/2703/main.py", line 2
    if(idade=<18):
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:04:08) 
-- CODE:
idade=int(input("qual a idade?: "))
if(idade=>18):
   mensagem="eleitor"
else:
   mensagem="nao_eleitor"
print(mensagem.lower())
-- EXECUTION TIME:
0.163814
-- ERROR:
  File "/home/codebench/codes/1649/2703/main.py", line 2
    if(idade=>18):
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:04:23) 
-- CODE:
idade=int(input("qual a idade?: "))
if(idade=>18):
   mensagem="eleitor"
else:
   mensagem="nao_eleitor"
print(mensagem.lower())
-- ERROR:
File "XXXX", line 2
    if(idade=>18):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:04:57) 
-- CODE:
idade=int(input("qual a idade?: "))
if(idade<18):
   mensagem="nao_eleitor"
else:
   mensagem="eleitor"
print(mensagem.lower())
-- EXECUTION TIME:
0.15216
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
